--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -9,15 +9,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-04-06 17:23+0200\n"
-"PO-Revision-Date: 2024-04-06 16:44+0000\n"
+"PO-Revision-Date: 2024-04-11 19:01+0000\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? "
-"1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 "X-Translated-Using: django-rosetta 0.10.0\n"
 
 #: .\cart\forms.py:11 .\templates\cart\detail.html:12
@@ -179,8 +178,7 @@ msgstr "Su compra"
 msgid ""
 "\n"
 "            \"%(code)s\" (%(discount)s%% off)\n"
-"            <span class=\"neg\">- $%(cart.get_discount|floatformat:2)s </"
-"span>\n"
+"            <span class=\"neg\">- $%(cart.get_discount|floatformat:2)s </span>\n"
 "            "
 msgstr ""
 
